--- a/app/src/main/res/layout/activity_ai_result.xml
+++ b/app/src/main/res/layout/activity_ai_result.xml
@@ -63,7 +63,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/name1"
+                    android:id="@+id/restaurantname"
                     android:layout_width="234dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
@@ -74,7 +74,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/distance1"
+                    android:id="@+id/restaddress"
                     android:layout_width="234dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
@@ -84,7 +84,7 @@
                     android:textSize="12sp" />
 
                 <TextView
-                    android:id="@+id/address1"
+                    android:id="@+id/restphone"
                     android:layout_width="234dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
@@ -94,7 +94,7 @@
                     android:textSize="10sp" />
 
                 <TextView
-                    android:id="@+id/hashtag1"
+                    android:id="@+id/resthash"
                     android:layout_width="234dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
@@ -125,7 +125,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/name2"
+                    android:id="@+id/cafeplace"
                     android:layout_width="234dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
@@ -136,7 +136,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/distance2"
+                    android:id="@+id/cafeaddress"
                     android:layout_width="234dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
@@ -146,7 +146,7 @@
                     android:textSize="12sp" />
 
                 <TextView
-                    android:id="@+id/address2"
+                    android:id="@+id/cafephone"
                     android:layout_width="234dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
@@ -156,7 +156,7 @@
                     android:textSize="10sp" />
 
                 <TextView
-                    android:id="@+id/hashtag2"
+                    android:id="@+id/cafehash"
                     android:layout_width="234dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
@@ -187,7 +187,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/name3"
+                    android:id="@+id/drinkname"
                     android:layout_width="234dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
@@ -198,7 +198,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/distance3"
+                    android:id="@+id/drinkaddress"
                     android:layout_width="234dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
@@ -208,7 +208,7 @@
                     android:textSize="12sp" />
 
                 <TextView
-                    android:id="@+id/address3"
+                    android:id="@+id/drinkphone"
                     android:layout_width="234dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
@@ -218,7 +218,7 @@
                     android:textSize="10sp" />
 
                 <TextView
-                    android:id="@+id/hashtag3"
+                    android:id="@+id/drinkhash"
                     android:layout_width="234dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="22dp"
