--- a/app/src/main/res/layout/activity_moim_result.xml
+++ b/app/src/main/res/layout/activity_moim_result.xml
@@ -139,7 +139,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/name1"
+                android:id="@+id/restaurantname"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -150,7 +150,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/distance1"
+                android:id="@+id/restaddress"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -160,7 +160,7 @@
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/address1"
+                android:id="@+id/restphone"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -170,7 +170,7 @@
                 android:textSize="10sp" />
 
             <TextView
-                android:id="@+id/hashtag1"
+                android:id="@+id/resthash"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -201,7 +201,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/name2"
+                android:id="@+id/cafeplace"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -212,7 +212,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/distance2"
+                android:id="@+id/cafeaddress"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -222,7 +222,7 @@
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/address2"
+                android:id="@+id/cafephone"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -232,7 +232,7 @@
                 android:textSize="10sp" />
 
             <TextView
-                android:id="@+id/hashtag2"
+                android:id="@+id/cafehash"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -263,7 +263,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/name3"
+                android:id="@+id/drinkname"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -274,7 +274,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/distance3"
+                android:id="@+id/drinkaddress"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -284,7 +284,7 @@
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/address3"
+                android:id="@+id/drinkphone"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -294,7 +294,7 @@
                 android:textSize="10sp" />
 
             <TextView
-                android:id="@+id/hashtag3"
+                android:id="@+id/drinkhash"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
