--- a/app/src/main/res/layout/course_item.xml
+++ b/app/src/main/res/layout/course_item.xml
@@ -22,7 +22,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/name1"
+                android:id="@+id/restaurantname"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -33,7 +33,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/distance1"
+                android:id="@+id/restaddress"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -43,7 +43,7 @@
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/address1"
+                android:id="@+id/restphone"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -53,7 +53,7 @@
                 android:textSize="10sp" />
 
             <TextView
-                android:id="@+id/hashtag1"
+                android:id="@+id/resthash"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -85,7 +85,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/name2"
+                android:id="@+id/cafeplace"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -96,7 +96,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/distance2"
+                android:id="@+id/cafeaddress"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -106,7 +106,7 @@
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/address2"
+                android:id="@+id/cafephone"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -116,7 +116,7 @@
                 android:textSize="10sp" />
 
             <TextView
-                android:id="@+id/hashtag2"
+                android:id="@+id/cafehash"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -148,7 +148,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/name3"
+                android:id="@+id/drinkname"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -159,7 +159,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/distance3"
+                android:id="@+id/drinkaddress"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -169,7 +169,7 @@
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/address3"
+                android:id="@+id/drinkphone"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
@@ -179,7 +179,7 @@
                 android:textSize="10sp" />
 
             <TextView
-                android:id="@+id/hashtag3"
+                android:id="@+id/drinkhash"
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="22dp"
