--- a/app/src/main/res/layout/activity_time_result.xml
+++ b/app/src/main/res/layout/activity_time_result.xml
@@ -42,7 +42,7 @@
             android:layout_marginTop="20dp"
             android:gravity="center"
             android:padding="8dp"
-            android:text="3월 1주차"
+            android:text="5월 4주차"
             android:textColor="#000000"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -77,6 +77,7 @@
         android:layout_width="346dp"
         android:layout_height="36dp"
         android:layout_gravity="center"
+        android:layout_marginTop="20dp"
         android:background="@drawable/round_button"
         android:text="중간장소 확인하기"
         android:textColor="#FFFFFF" />
